/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2020-12-31 16:50 UTC+0100 Wilfried Brunken DF7BE
  * include/incomp_pointer.h
    ! Ticket #74:
    ! One left warning with GCC 9 fixed. 
  * samples/testxml.prg
    ! Fixing and decribing the fix for
    ! obscure behavior of GET.
  * doc/hwgdoc_commands.html
  * whatsnew.txt
  * samples/Readme.txt
    ! Docu updated.

2020-12-24 08:30 UTC+0100 Wilfried Brunken DF7BE
  * include/incomp_pointer.h
  * source/winapi/control.c
  * source/winapi/dialog.c
  * source/winapi/draw.c
  * source/winapi/freeimg.c
  * source/winapi/misc.c
  * source/winapi/nice.c
  * source/winapi/registry.c
  * source/winapi/resource.c
  * source/winapi/richedit.c
  * source/winapi/shellapi.c
  * source/winapi/window.c
  * source/winapi/wprint.c
    ! Tickets: #74, #36, #40
    ! MinGW64 support:
    ! Suppress warnings,
    ! now build all libs without
    ! warn messages.  
  * image/Datepick_Button.bmp (New)
    ! Preparation for DATEPCKER
    ! port to GTK.

2020-12-23 10:50 UTC+0100 Wilfried Brunken DF7BE
  * contrib/ext_controls/theme.c
  * include/incomp_pointer.h (New)
    ! Ticket #74: Solution with new include:
    ! Suppress warning if a function pointer is cast
    ! to an incompatible function pointer
    ! for GCC >= 8.1.x (MinGW64) 

2020-12-23 10:50 UTC+0100 Wilfried Brunken DF7BE
  * contrib/hwg_extctrl.hbp
    ! Ticket #74: See post to ticket
  * source/gtk/hedit.prg
  * source/winapi/hedit.prg
    ! New function hwg_GET_Helper(),
    ! Handles a problem with GET on GTK.
  * samples/Readme.txt
  * samples/testxml.prg
  * samples/testxml.xml
    ! Ready for GTK, codepage
    ! changed to Win 1251,
    ! but russian always possible 
  * samples/testmenubitmap.prg
    ! Preparation for GTK, added
    ! hints for port to GTK.
  * doc/hwgdoc.html
  * doc/hwgdoc_classes.html